--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
-  "version": 1,
-  "env": {},
+  "version": 2,
   "builds": [
     {
-      "src": "index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["/node_modules"] }
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
     }
   ]
 }
